@@ -32,6 +32,64 @@
 namespace CIAO_PSL_SampleLost_Sender_Impl
 {
   /**
+   * ConnectorStatusListener_exec_i
+   */
+  ConnectorStatusListener_exec_i::ConnectorStatusListener_exec_i (
+    Sender_exec_i &callback)
+    : callback_ (callback)
+    , started_(false)
+  {
+  }
+
+  ConnectorStatusListener_exec_i::~ConnectorStatusListener_exec_i (void)
+  {
+  }
+
+  // Operations from ::CCM_DDS::ConnectorStatusListener
+  void ConnectorStatusListener_exec_i::on_inconsistent_topic (
+    ::DDS::Topic_ptr /*the_topic*/,
+    const DDS::InconsistentTopicStatus & /*status*/)
+  {
+  }
+
+  void ConnectorStatusListener_exec_i::on_requested_incompatible_qos (
+    ::DDS::DataReader_ptr /*the_reader*/,
+    const DDS::RequestedIncompatibleQosStatus & /*status*/)
+  {
+  }
+
+  void ConnectorStatusListener_exec_i::on_sample_rejected (
+    ::DDS::DataReader_ptr /*the_reader*/,
+    const DDS::SampleRejectedStatus & /*status*/)
+  {
+  }
+
+  void ConnectorStatusListener_exec_i::on_offered_deadline_missed(
+    ::DDS::DataWriter_ptr /*the_writer*/,
+    const DDS::OfferedDeadlineMissedStatus & /*status*/)
+  {
+  }
+
+  void ConnectorStatusListener_exec_i::on_offered_incompatible_qos(
+    ::DDS::DataWriter_ptr /*the_writer*/,
+    const DDS::OfferedIncompatibleQosStatus & /*status*/)
+  {
+  }
+
+  void ConnectorStatusListener_exec_i::on_unexpected_status(
+    ::DDS::Entity_ptr /*the_entity*/,
+    ::DDS::StatusKind status_kind)
+  {
+    if (!this->started_ && status_kind == ::DDS::PUBLICATION_MATCHED_STATUS)
+      {
+        this->started_ = true;
+        ACE_DEBUG ((LM_DEBUG, "ConnectorStatusListener_exec_i::on_unexpected_status - "
+          "Publication matched received: starting the test\n"));
+        this->callback_.get_started ();
+      }
+  }
+
+  /**
    * Write action generator
    */
 
@@ -85,6 +143,12 @@ namespace CIAO_PSL_SampleLost_Sender_Impl
     return reactor;
   }
 
+  ::CCM_DDS::CCM_ConnectorStatusListener_ptr
+  Sender_exec_i::get_connector_status (void)
+  {
+    return new ConnectorStatusListener_exec_i  (*this);
+  }
+
   void
   Sender_exec_i::tick ()
   {
@@ -109,6 +173,15 @@ namespace CIAO_PSL_SampleLost_Sender_Impl
                     i->first.c_str ()));
           }
        }
+  }
+
+  void
+  Sender_exec_i::get_started (void)
+  {
+    //add 2 different instances of topic
+    this->add_instance_of_topic ("ONE",1);
+    this->add_instance_of_topic ("TWO",2);
+    this->start ();
   }
 
   void
@@ -170,10 +243,6 @@ namespace CIAO_PSL_SampleLost_Sender_Impl
   void
   Sender_exec_i::ccm_activate (void)
   {
-    //add 2 different instances of topic
-    this->add_instance_of_topic ("ONE",1);
-    this->add_instance_of_topic ("TWO",2);
-    this->start ();
   }
 
   void
