@@ -47,6 +47,41 @@ namespace CIAO_PSL_SampleLost_Sender_Impl
   class Sender_exec_i;
 
   /**
+   * ConnectorStatusListener_exec_i
+   */
+  class SENDER_EXEC_Export ConnectorStatusListener_exec_i
+    : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
+      public virtual ::CORBA::LocalObject
+  {
+  public:
+    ConnectorStatusListener_exec_i (Sender_exec_i &callback);
+    virtual ~ConnectorStatusListener_exec_i (void);
+
+    virtual
+    void on_inconsistent_topic (::DDS::Topic_ptr the_topic,
+                                const DDS::InconsistentTopicStatus & status);
+    virtual
+    void on_requested_incompatible_qos (::DDS::DataReader_ptr the_reader,
+                                        const DDS::RequestedIncompatibleQosStatus & status);
+    virtual
+    void on_sample_rejected (::DDS::DataReader_ptr the_reader,
+                             const DDS::SampleRejectedStatus & status);
+    virtual
+      void on_offered_deadline_missed (::DDS::DataWriter_ptr the_writer,
+                                       const DDS::OfferedDeadlineMissedStatus & status);
+    virtual
+    void on_offered_incompatible_qos (::DDS::DataWriter_ptr the_writer,
+                                      const DDS::OfferedIncompatibleQosStatus & status);
+    virtual
+      void on_unexpected_status (::DDS::Entity_ptr the_entity,
+                                 ::DDS::StatusKind status_kind);
+  private:
+    Sender_exec_i &callback_;
+    bool started_;
+  };
+
+
+  /**
    * Write action Generator
    */
 
@@ -76,6 +111,8 @@ namespace CIAO_PSL_SampleLost_Sender_Impl
 
     //@{
     /** Supported operations and attributes. */
+    virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
+    get_connector_status (void);
 
     //@}
 
@@ -95,7 +132,7 @@ namespace CIAO_PSL_SampleLost_Sender_Impl
     //@{
     /** User defined public operations. */
     void tick (void);
-
+    void get_started (void);
 
     //@}
 
