@@ -351,6 +351,25 @@
       <instance xmi:idref="PSL_SampleLost_ConnectorComponentInstance" />
     </internalEndpoint>
   </connection>
+  <connection>
+    <name>connector_status_connection_sender</name>
+    <deployRequirement>
+      <name>edu.dre.vanderbilt.DAnCE.ConnectionType</name>
+      <resourceType>Local_Interface</resourceType>
+    </deployRequirement>
+    <internalEndpoint>
+      <portName>error_listener</portName>
+      <provider>false</provider>
+      <kind>SimplexReceptacle</kind>
+      <instance xmi:idref="PSL_SampleLost_ConnectorComponentInstance" />
+    </internalEndpoint>
+    <internalEndpoint>
+      <portName>connector_status</portName>
+      <provider>true</provider>
+      <kind>Facet</kind>
+      <instance xmi:idref="SenderComponentInstance" />
+    </internalEndpoint>
+  </connection>
 
   <artifact xmi:id="Sender_ExecArtifact">
     <name>Sender_exec</name>
